--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Koffe Online",
-  "short_name": "Koffe",
+  "name": "Simply Koffee",
+  "short_name": "Koffee",
   "start_url": ".",
   "display": "standalone",
   "background_color": "#ffffff",
