--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,18 @@
 {
-  "name": "Simply Koffee",
-  "short_name": "Koffee",
-  "start_url": ".",
+  "name": "Koffe Online",
+  "short_name": "Koffe",
+  "start_url": "/index.html",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#6f4e37",
   "icons": [
     {
-      "src": "icons/icon-192.png",
+      "src": "/icons/icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icons/icon-512.png",
+      "src": "/icons/icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
