--- a/manifest.json
+++ b/manifest.json
@@ -7,14 +7,15 @@
   "theme_color": "#6f4e37",
   "icons": [
     {
-      "src": "/icons/icon-192.png",
+      "src": "/koffe_online/icons/icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/icons/icon-512.png",
+      "src": "/koffe_online/icons/icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
   ]
 }
+
